[package]
name = "ratio-gang-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
numfmt = "1.1.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
